Api returning list of the cards - restructured the structure of project

--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,8 +1,25 @@
+.card-list {
+  position: absolute;
+  left: 30%;
+  border: 2px solid white;
+  height: 125px;
+  width: 300px;
+  text-align: center;
+}
+
+.player {
+  bottom: 10px;
+}
+
+.dealer {
+  top: 10px;
+}
+
 .gameboard {
   position: relative;
   height: 500px;
   border: 5px solid black;
   border-radius: 20%;
   background-color: #204631;
-  color: #fff;
+  color: black;
 }
